YAML files/4-Deploy App/network-policies/network-policy-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-network-policy
  namespace: cldinf-app
spec:
  podSelector:
    matchLabels:
      app: cldinf-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: cldinf-web
      ports:
      - protocol: UDP
        port: 53
    - from:
      ports:
      - protocol: TCP
        port: 8000
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: cldinf-db
