YAML files/4-Deploy App/network-policies/network-policy-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-network-policy
  namespace: cldinf-app
spec:
  podSelector:
    matchLabels:
      app: cldinf-db
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: cldinf-api
      ports:
      - protocol: TCP
        port: 5432
